<resources>
    <string name="app_name">Maigc Live WallPaper</string>

    <string name="history_record">Video History</string>
    <string name="live_wallpaper">Live Wallpaper</string>
    <string name="mirror_wallpaper">Mirror Live Wallpaper</string>
    <string name="transperent_wallpaper">Transparency Live Wallpaper</string>
    <string name="video_wallpaper">Video Live Wallpaper</string>
    <string name="search">Search</string>

    <string name="action_sort_album">Album</string>
    <string name="action_sort_artist">Artist</string>
    <string name="action_sort_date">Date</string>
    <string name="action_sort_duration">Duration</string>
    <string name="action_sort_title">Title</string>

    <string name="set_video_wallpaper">Set LiveWallpaper</string>
    <string name="volume_text">Volume %s</string>
    <string name="apply_text">APPLY</string>
    <string name="apply_success_text">applay success</string>

    <string name="rating_title">LIKE %s</string>
    <string name="rating_content">We helped you set up a video wallpaper and would you like to give us a five star rating?</string>
    <string name="rating_btn_complain">Complain</string>
    <string name="rating_btn_satisfy">5 Star</string>
    <string name="system_wallpaper">System Live Wallpaper</string>
    <string name="share_content">Come and use it https://play.google.com/store/apps/details?id=com.wallpaper.videolivewallpaper</string>

    <string name="video_count_text">%s Videos</string>

    <string name="scale_fit_with_crop">Scale Fit With Crop</string>
    <string name="scale_fit">Scale Fit</string>

    <string name="audio_disbled">Audio is disabled</string>
    <string name="audio_enabled">Audio is enabled</string>

    <string name="delete_history">Delete History</string>
    <string name="delete_dialog_content">Do you want to delete history?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="content_empty">Content is Empty</string>
    <string name="empty_tips">Hurry up and shoot a video</string>

    <string name="rating_dialog_content">Like using Maigc Live WallPaper ? Please help us improve by rating us.</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="rate_now">RATE NOW</string>
    <string name="not_remind">Don\'t remind me again</string>

    <string name="re_loading">Reload</string>

    <string name="online_videowallpaper">Online WallPaper</string>
    <string name="download">Download</string>


    <string name="download_notification_title">Video WallPaper</string>
    <string name="download_notification_status">Download Status</string>

    <string name="start_download">Start downloading</string>
    <string name="error_download">Download error</string>
    <string name="finish_download">Download complete</string>
    <string name="downloading">Downloading...</string>

    <string name="downloaded">Complete</string>

    <string name="local_download">Local Video</string>
    <string name="download_added">Download already added</string>
    <string name="download_add_success">Download add success!</string>
    <string name="download_video_success">%s Download Finish</string>

    <string name="delete_download">Delete Download File</string>
    <string name="delete_download_content">Do you want to delete download file ?</string>
</resources>
