<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_item_overflow"
        android:orderInCategory="2"
        android:title="@string/action_sort_date"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_date"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/action_sort_date"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_sort_title"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/action_sort_title"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_sort_album"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/action_sort_album"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_sort_duration"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/action_sort_duration"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_sort_artist"
                android:icon="@drawable/ic_action_filter"
                android:title="@string/action_sort_artist"
                app:showAsAction="ifRoom" />
        </menu>

    </item>


</menu>