<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    >

    <LinearLayout
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:textColor="@color/video_title"
            android:textSize="@dimen/text_size_large"
            android:layout_marginLeft="8dp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:textColor="@color/video_title"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="sans-serif"
        android:text="@string/rating_dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/rating_cb"
        android:text="@string/not_remind"
        android:layout_gravity="left"
        android:fontFamily="sans-serif"
        android:textColor="@color/video_title"
        android:textSize="@dimen/text_size_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|right"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancel_tv"
            android:background="@drawable/list_item_bg"
            android:textColor="@color/video_title"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/no_thanks"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rate_tv"
            android:background="@drawable/list_item_bg"
            android:textColor="@color/video_title"
            android:textSize="16sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginLeft="16dp"
            android:text="@string/rate_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>